fix local cds archive invalidation